@@ -1,3 +1,7 @@
+2022-12-14  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* configure.ac: Enable shared library
+
 2022-12-13  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* tests/Makefile.am: Fix FreeBSD builds
